<resources>
    <string name="app_name">TBC_Course_13</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="phone_number">+995 558142737</string>
    <string name="my_name">Luka Nikuradze</string>
    <string name="address">Address</string>
    <string name="notification">Notification</string>
    <string name="payment">Payment</string>
    <string name="security">Security</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="help_center">Help Center</string>
    <string name="friends">Invite Friends</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
</resources>